--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Personal .gitignore file
+# IDE
+.vscode/
+web/uploads
+
+
+# Github Python .gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,6 +134,3 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
-# IDE
-.vscode/
